@@ -8,17 +8,20 @@ package org.opensearch.sql.opensearch.request;
 
 import static java.util.stream.Collectors.mapping;
 import static java.util.stream.Collectors.toList;
-import static org.opensearch.index.query.QueryBuilders.boolQuery;
 import static org.opensearch.index.query.QueryBuilders.matchAllQuery;
 import static org.opensearch.index.query.QueryBuilders.nestedQuery;
 import static org.opensearch.search.sort.FieldSortBuilder.DOC_FIELD_NAME;
 import static org.opensearch.search.sort.SortOrder.ASC;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.ToString;
@@ -37,14 +40,12 @@ import org.opensearch.search.fetch.subphase.highlight.HighlightBuilder;
 import org.opensearch.search.sort.SortBuilder;
 import org.opensearch.search.sort.SortBuilders;
 import org.opensearch.sql.ast.expression.Literal;
-import org.opensearch.sql.common.setting.Settings;
 import org.opensearch.sql.common.utils.StringUtils;
 import org.opensearch.sql.exception.SemanticCheckException;
 import org.opensearch.sql.expression.ReferenceExpression;
 import org.opensearch.sql.opensearch.data.type.OpenSearchDataType;
 import org.opensearch.sql.opensearch.data.value.OpenSearchExprValueFactory;
 import org.opensearch.sql.opensearch.response.agg.OpenSearchAggregationResponseParser;
-import org.opensearch.sql.planner.logical.LogicalNested;
 
 /**
  * OpenSearch search request builder.
@@ -55,24 +56,19 @@ import org.opensearch.sql.planner.logical.LogicalNested;
 public class OpenSearchRequestBuilder {
 
   /**
-   * Default query timeout in minutes.
-   */
-  public static final TimeValue DEFAULT_QUERY_TIMEOUT = TimeValue.timeValueMinutes(1L);
-
-  /**
-   * {@link OpenSearchRequest.IndexName}.
-   */
-  private final OpenSearchRequest.IndexName indexName;
-
-  /**
-   * Index max result window.
-   */
-  private final Integer maxResultWindow;
-
-  /**
    * Search request source builder.
    */
   private final SearchSourceBuilder sourceBuilder;
+
+  /**
+   * Query size of the request -- how many rows will be returned.
+   */
+  private int requestedTotalSize;
+
+  /**
+   * Size of each page request to return.
+   */
+  private Integer pageSize = null;
 
   /**
    * OpenSearchExprValueFactory.
@@ -80,35 +76,19 @@ public class OpenSearchRequestBuilder {
   @EqualsAndHashCode.Exclude
   @ToString.Exclude
   private final OpenSearchExprValueFactory exprValueFactory;
-
-  /**
-   * Query size of the request.
-   */
-  private Integer querySize;
-
-  public OpenSearchRequestBuilder(String indexName,
-                                  Integer maxResultWindow,
-                                  Settings settings,
-                                  OpenSearchExprValueFactory exprValueFactory) {
-    this(new OpenSearchRequest.IndexName(indexName), maxResultWindow, settings, exprValueFactory);
-  }
+  private int startFrom = 0;
 
   /**
    * Constructor.
    */
-  public OpenSearchRequestBuilder(OpenSearchRequest.IndexName indexName,
-                                  Integer maxResultWindow,
-                                  Settings settings,
+  public OpenSearchRequestBuilder(int requestedTotalSize,
                                   OpenSearchExprValueFactory exprValueFactory) {
-    this.indexName = indexName;
-    this.maxResultWindow = maxResultWindow;
-    this.sourceBuilder = new SearchSourceBuilder();
+    this.requestedTotalSize = requestedTotalSize;
+    this.sourceBuilder = new SearchSourceBuilder()
+        .from(startFrom)
+        .timeout(OpenSearchRequest.DEFAULT_QUERY_TIMEOUT)
+        .trackScores(false);
     this.exprValueFactory = exprValueFactory;
-    this.querySize = settings.getSettingValue(Settings.Key.QUERY_SIZE_LIMIT);
-    sourceBuilder.from(0);
-    sourceBuilder.size(querySize);
-    sourceBuilder.timeout(DEFAULT_QUERY_TIMEOUT);
-    sourceBuilder.trackScores(false);
   }
 
   /**
@@ -116,16 +96,36 @@ public class OpenSearchRequestBuilder {
    *
    * @return query request or scroll request
    */
-  public OpenSearchRequest build() {
-    Integer from = sourceBuilder.from();
-    Integer size = sourceBuilder.size();
-
-    if (from + size <= maxResultWindow) {
-      return new OpenSearchQueryRequest(indexName, sourceBuilder, exprValueFactory);
+  public OpenSearchRequest build(OpenSearchRequest.IndexName indexName,
+                                 int maxResultWindow, TimeValue scrollTimeout) {
+    int size = requestedTotalSize;
+    FetchSourceContext fetchSource = this.sourceBuilder.fetchSource();
+    List<String> includes = fetchSource != null
+        ? Arrays.asList(fetchSource.includes())
+        : List.of();
+    if (pageSize == null) {
+      if (startFrom + size > maxResultWindow) {
+        sourceBuilder.size(maxResultWindow - startFrom);
+        return new OpenSearchScrollRequest(
+            indexName, scrollTimeout, sourceBuilder, exprValueFactory, includes);
+      } else {
+        sourceBuilder.from(startFrom);
+        sourceBuilder.size(requestedTotalSize);
+        return new OpenSearchQueryRequest(indexName, sourceBuilder, exprValueFactory, includes);
+      }
     } else {
-      sourceBuilder.size(maxResultWindow - from);
-      return new OpenSearchScrollRequest(indexName, sourceBuilder, exprValueFactory);
+      if (startFrom != 0) {
+        throw new UnsupportedOperationException("Non-zero offset is not supported with pagination");
+      }
+      sourceBuilder.size(pageSize);
+      return new OpenSearchScrollRequest(indexName, scrollTimeout,
+          sourceBuilder, exprValueFactory, includes);
     }
+  }
+
+
+  boolean isBoolFilterQuery(QueryBuilder current) {
+    return (current instanceof BoolQueryBuilder);
   }
 
   /**
@@ -133,7 +133,7 @@ public class OpenSearchRequestBuilder {
    *
    * @param query  query request
    */
-  public void pushDown(QueryBuilder query) {
+  public void pushDownFilter(QueryBuilder query) {
     QueryBuilder current = sourceBuilder.query();
 
     if (current == null) {
@@ -160,7 +160,7 @@ public class OpenSearchRequestBuilder {
    */
   public void pushDownAggregation(
       Pair<List<AggregationBuilder>, OpenSearchAggregationResponseParser> aggregationBuilder) {
-    aggregationBuilder.getLeft().forEach(builder -> sourceBuilder.aggregation(builder));
+    aggregationBuilder.getLeft().forEach(sourceBuilder::aggregation);
     sourceBuilder.size(0);
     exprValueFactory.setParser(aggregationBuilder.getRight());
   }
@@ -182,15 +182,20 @@ public class OpenSearchRequestBuilder {
   }
 
   /**
-   * Push down size (limit) and from (offset) to DSL request.
+   * Pushdown size (limit) and from (offset) to DSL request.
    */
   public void pushDownLimit(Integer limit, Integer offset) {
-    querySize = limit;
+    requestedTotalSize = limit;
+    startFrom = offset;
     sourceBuilder.from(offset).size(limit);
   }
 
   public void pushDownTrackedScore(boolean trackScores) {
     sourceBuilder.trackScores(trackScores);
+  }
+
+  public void pushDownPageSize(int pageSize) {
+    this.pageSize = pageSize;
   }
 
   /**
@@ -227,26 +232,22 @@ public class OpenSearchRequestBuilder {
   }
 
   /**
-   * Push down project list to DSL requets.
+   * Push down project list to DSL requests.
    */
   public void pushDownProjects(Set<ReferenceExpression> projects) {
-    final Set<String> projectsSet =
-        projects.stream().map(ReferenceExpression::getAttr).collect(Collectors.toSet());
-    sourceBuilder.fetchSource(projectsSet.toArray(new String[0]), new String[0]);
+    sourceBuilder.fetchSource(
+        projects.stream().map(ReferenceExpression::getAttr).distinct().toArray(String[]::new),
+        new String[0]);
   }
 
   public void pushTypeMapping(Map<String, OpenSearchDataType> typeMapping) {
     exprValueFactory.extendTypeMapping(typeMapping);
   }
 
-  private boolean isBoolFilterQuery(QueryBuilder current) {
-    return (current instanceof BoolQueryBuilder);
-  }
-
   private boolean isSortByDocOnly() {
     List<SortBuilder<?>> sorts = sourceBuilder.sorts();
     if (sorts != null) {
-      return sorts.equals(Arrays.asList(SortBuilders.fieldSort(DOC_FIELD_NAME)));
+      return sorts.equals(List.of(SortBuilders.fieldSort(DOC_FIELD_NAME)));
     }
     return false;
   }
@@ -257,11 +258,35 @@ public class OpenSearchRequestBuilder {
    */
   public void pushDownNested(List<Map<String, ReferenceExpression>> nestedArgs) {
     initBoolQueryFilter();
+    List<NestedQueryBuilder> nestedQueries = extractNestedQueries(query());
     groupFieldNamesByPath(nestedArgs).forEach(
-          (path, fieldNames) -> buildInnerHit(
-              fieldNames, createEmptyNestedQuery(path)
-          )
+        (path, fieldNames) ->
+            buildInnerHit(fieldNames, findNestedQueryWithSamePath(nestedQueries, path))
     );
+  }
+
+  /**
+   * InnerHit must be added to the NestedQueryBuilder. We need to extract
+   * the nested queries currently in the query if there is already a filter
+   * push down with nested query.
+   * @param query : current query.
+   * @return : grouped nested queries currently in query.
+   */
+  private List<NestedQueryBuilder> extractNestedQueries(QueryBuilder query) {
+    List<NestedQueryBuilder> result = new ArrayList<>();
+    if (query instanceof NestedQueryBuilder) {
+      result.add((NestedQueryBuilder) query);
+    } else if (query instanceof BoolQueryBuilder) {
+      BoolQueryBuilder boolQ = (BoolQueryBuilder) query;
+      Stream.of(boolQ.filter(), boolQ.must(), boolQ.should())
+          .flatMap(Collection::stream)
+          .forEach(q -> result.addAll(extractNestedQueries(q)));
+    }
+    return result;
+  }
+
+  public int getMaxResponseSize() {
+    return pageSize == null ? requestedTotalSize : pageSize;
   }
 
   /**
@@ -308,12 +333,40 @@ public class OpenSearchRequestBuilder {
   }
 
   /**
+   * We need to group nested queries with same path for adding new fields with same path of
+   * inner hits. If we try to add additional inner hits with same path we get an OS error.
+   * @param nestedQueries Current list of nested queries in query.
+   * @param path path comparing with current nested queries.
+   * @return Query with same path or new empty nested query.
+   */
+  private NestedQueryBuilder findNestedQueryWithSamePath(
+      List<NestedQueryBuilder> nestedQueries, String path
+  ) {
+    return nestedQueries.stream()
+        .filter(query -> isSamePath(path, query))
+        .findAny()
+        .orElseGet(createEmptyNestedQuery(path));
+  }
+
+  /**
+   * Check if is nested query is of the same path value.
+   * @param path Value of path to compare with nested query.
+   * @param query nested query builder to compare with path.
+   * @return true if nested query has same path.
+   */
+  private boolean isSamePath(String path, NestedQueryBuilder query) {
+    return nestedQuery(path, query.query(), query.scoreMode()).equals(query);
+  }
+
+  /**
    * Create a nested query with match all filter to place inner hits.
    */
-  private NestedQueryBuilder createEmptyNestedQuery(String path) {
-    NestedQueryBuilder nestedQuery = nestedQuery(path, matchAllQuery(), ScoreMode.None);
-    ((BoolQueryBuilder) query().filter().get(0)).must(nestedQuery);
-    return nestedQuery;
+  private Supplier<NestedQueryBuilder> createEmptyNestedQuery(String path) {
+    return () -> {
+      NestedQueryBuilder nestedQuery = nestedQuery(path, matchAllQuery(), ScoreMode.None);
+      ((BoolQueryBuilder) query().filter().get(0)).must(nestedQuery);
+      return nestedQuery;
+    };
   }
 
   /**
