@@ -34,8 +34,12 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicBoolean;
+import lombok.SneakyThrows;
+import org.apache.commons.lang3.reflect.FieldUtils;
 import org.apache.lucene.search.TotalHits;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayNameGeneration;
+import org.junit.jupiter.api.DisplayNameGenerator;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InOrder;
@@ -55,8 +59,8 @@ import org.opensearch.client.node.NodeClient;
 import org.opensearch.cluster.metadata.AliasMetadata;
 import org.opensearch.cluster.metadata.IndexMetadata;
 import org.opensearch.cluster.metadata.MappingMetadata;
-import org.opensearch.common.collect.ImmutableOpenMap;
 import org.opensearch.common.settings.Settings;
+import org.opensearch.common.unit.TimeValue;
 import org.opensearch.common.util.concurrent.ThreadContext;
 import org.opensearch.common.xcontent.XContentType;
 import org.opensearch.core.xcontent.DeprecationHandler;
@@ -65,6 +69,7 @@ import org.opensearch.core.xcontent.XContentParser;
 import org.opensearch.index.IndexNotFoundException;
 import org.opensearch.search.SearchHit;
 import org.opensearch.search.SearchHits;
+import org.opensearch.search.builder.SearchSourceBuilder;
 import org.opensearch.sql.data.model.ExprIntegerValue;
 import org.opensearch.sql.data.model.ExprTupleValue;
 import org.opensearch.sql.data.model.ExprValue;
@@ -72,10 +77,12 @@ import org.opensearch.sql.opensearch.data.type.OpenSearchDataType;
 import org.opensearch.sql.opensearch.data.type.OpenSearchTextType;
 import org.opensearch.sql.opensearch.data.value.OpenSearchExprValueFactory;
 import org.opensearch.sql.opensearch.mapping.IndexMapping;
+import org.opensearch.sql.opensearch.request.OpenSearchRequest;
 import org.opensearch.sql.opensearch.request.OpenSearchScrollRequest;
 import org.opensearch.sql.opensearch.response.OpenSearchResponse;
 
 @ExtendWith(MockitoExtension.class)
+@DisplayNameGeneration(DisplayNameGenerator.ReplaceUnderscores.class)
 class OpenSearchNodeClientTest {
 
   private static final String TEST_MAPPING_FILE = "mappings/accounts.json";
@@ -91,13 +98,10 @@ class OpenSearchNodeClientTest {
   private SearchHit searchHit;
 
   @Mock
-  private ThreadContext threadContext;
-
-  @Mock
   private GetIndexResponse indexResponse;
 
-  private ExprTupleValue exprTupleValue = ExprTupleValue.fromExprValueMap(ImmutableMap.of("id",
-      new ExprIntegerValue(1)));
+  private final ExprTupleValue exprTupleValue = ExprTupleValue.fromExprValueMap(
+      Map.of("id", new ExprIntegerValue(1)));
 
   private OpenSearchClient client;
 
@@ -107,7 +111,7 @@ class OpenSearchNodeClientTest {
   }
 
   @Test
-  void isIndexExist() {
+  void is_index_exist() {
     when(nodeClient.admin().indices()
         .exists(any(IndicesExistsRequest.class)).actionGet())
         .thenReturn(new IndicesExistsResponse(true));
@@ -116,7 +120,7 @@ class OpenSearchNodeClientTest {
   }
 
   @Test
-  void isIndexNotExist() {
+  void is_index_not_exist() {
     String indexName = "test";
     when(nodeClient.admin().indices()
         .exists(any(IndicesExistsRequest.class)).actionGet())
@@ -126,14 +130,14 @@ class OpenSearchNodeClientTest {
   }
 
   @Test
-  void isIndexExistWithException() {
+  void is_index_exist_with_exception() {
     when(nodeClient.admin().indices().exists(any())).thenThrow(RuntimeException.class);
 
     assertThrows(IllegalStateException.class, () -> client.exists("test"));
   }
 
   @Test
-  void createIndex() {
+  void create_index() {
     String indexName = "test";
     Map<String, Object> mappings = ImmutableMap.of(
         "properties",
@@ -146,7 +150,7 @@ class OpenSearchNodeClientTest {
   }
 
   @Test
-  void createIndexWithException() {
+  void create_index_with_exception() {
     when(nodeClient.admin().indices().create(any())).thenThrow(RuntimeException.class);
 
     assertThrows(IllegalStateException.class,
@@ -154,7 +158,7 @@ class OpenSearchNodeClientTest {
   }
 
   @Test
-  void getIndexMappings() throws IOException {
+  void get_index_mappings() throws IOException {
     URL url = Resources.getResource(TEST_MAPPING_FILE);
     String mappings = Resources.toString(url, Charsets.UTF_8);
     String indexName = "test";
@@ -225,7 +229,7 @@ class OpenSearchNodeClientTest {
   }
 
   @Test
-  void getIndexMappingsWithEmptyMapping() {
+  void get_index_mappings_with_empty_mapping() {
     String indexName = "test";
     mockNodeClientIndicesMappings(indexName, "");
     Map<String, IndexMapping> indexMappings = client.getIndexMappings(indexName);
@@ -236,7 +240,7 @@ class OpenSearchNodeClientTest {
   }
 
   @Test
-  void getIndexMappingsWithIOException() {
+  void get_index_mappings_with_IOException() {
     String indexName = "test";
     when(nodeClient.admin().indices()).thenThrow(RuntimeException.class);
 
@@ -244,7 +248,7 @@ class OpenSearchNodeClientTest {
   }
 
   @Test
-  void getIndexMappingsWithNonExistIndex() {
+  void get_index_mappings_with_non_exist_index() {
     when(nodeClient.admin().indices()
         .prepareGetMappings(any())
         .setLocal(anyBoolean())
@@ -255,7 +259,7 @@ class OpenSearchNodeClientTest {
   }
 
   @Test
-  void getIndexMaxResultWindows() throws IOException {
+  void get_index_max_result_windows() throws IOException {
     URL url = Resources.getResource(TEST_MAPPING_SETTINGS_FILE);
     String indexMetadata = Resources.toString(url, Charsets.UTF_8);
     String indexName = "accounts";
@@ -269,7 +273,7 @@ class OpenSearchNodeClientTest {
   }
 
   @Test
-  void getIndexMaxResultWindowsWithDefaultSettings() throws IOException {
+  void get_index_max_result_windows_with_default_settings() throws IOException {
     URL url = Resources.getResource(TEST_MAPPING_FILE);
     String indexMetadata = Resources.toString(url, Charsets.UTF_8);
     String indexName = "accounts";
@@ -283,7 +287,7 @@ class OpenSearchNodeClientTest {
   }
 
   @Test
-  void getIndexMaxResultWindowsWithIOException() {
+  void get_index_max_result_windows_with_IOException() {
     String indexName = "test";
     when(nodeClient.admin().indices()).thenThrow(RuntimeException.class);
 
@@ -292,7 +296,7 @@ class OpenSearchNodeClientTest {
 
   /** Jacoco enforce this constant lambda be tested. */
   @Test
-  void testAllFieldsPredicate() {
+  void test_all_fields_predicate() {
     assertTrue(OpenSearchNodeClient.ALL_FIELDS.apply("any_index").test("any_field"));
   }
 
@@ -310,16 +314,17 @@ class OpenSearchNodeClientTest {
                 1.0F));
     when(searchHit.getSourceAsString()).thenReturn("{\"id\", 1}");
     when(searchHit.getInnerHits()).thenReturn(null);
-    when(factory.construct(any())).thenReturn(exprTupleValue);
+    when(factory.construct(any(), anyBoolean())).thenReturn(exprTupleValue);
 
     // Mock second scroll request followed
     SearchResponse scrollResponse = mock(SearchResponse.class);
     when(nodeClient.searchScroll(any()).actionGet()).thenReturn(scrollResponse);
-    when(scrollResponse.getScrollId()).thenReturn("scroll456");
     when(scrollResponse.getHits()).thenReturn(SearchHits.empty());
 
     // Verify response for first scroll request
-    OpenSearchScrollRequest request = new OpenSearchScrollRequest("test", factory);
+    OpenSearchScrollRequest request = new OpenSearchScrollRequest(
+        new OpenSearchRequest.IndexName("test"), TimeValue.timeValueMinutes(1),
+        new SearchSourceBuilder(), factory, List.of("id"));
     OpenSearchResponse response1 = client.search(request);
     assertFalse(response1.isEmpty());
 
@@ -329,6 +334,7 @@ class OpenSearchNodeClientTest {
     assertFalse(hits.hasNext());
 
     // Verify response for second scroll request
+    request.setScrollId("scroll123");
     OpenSearchResponse response2 = client.search(request);
     assertTrue(response2.isEmpty());
   }
@@ -344,16 +350,21 @@ class OpenSearchNodeClientTest {
   }
 
   @Test
+  @SneakyThrows
   void cleanup() {
     ClearScrollRequestBuilder requestBuilder = mock(ClearScrollRequestBuilder.class);
     when(nodeClient.prepareClearScroll()).thenReturn(requestBuilder);
     when(requestBuilder.addScrollId(any())).thenReturn(requestBuilder);
     when(requestBuilder.get()).thenReturn(null);
 
-    OpenSearchScrollRequest request = new OpenSearchScrollRequest("test", factory);
+    OpenSearchScrollRequest request = new OpenSearchScrollRequest(
+        new OpenSearchRequest.IndexName("test"), TimeValue.timeValueMinutes(1),
+        new SearchSourceBuilder(), factory, List.of());
     request.setScrollId("scroll123");
+    // Enforce cleaning by setting a private field.
+    FieldUtils.writeField(request, "needClean", true, true);
     client.cleanup(request);
-    assertFalse(request.isScrollStarted());
+    assertFalse(request.isScroll());
 
     InOrder inOrder = Mockito.inOrder(nodeClient, requestBuilder);
     inOrder.verify(nodeClient).prepareClearScroll();
@@ -362,18 +373,32 @@ class OpenSearchNodeClientTest {
   }
 
   @Test
-  void cleanupWithoutScrollId() {
-    OpenSearchScrollRequest request = new OpenSearchScrollRequest("test", factory);
+  void cleanup_without_scrollId() {
+    OpenSearchScrollRequest request = new OpenSearchScrollRequest(
+        new OpenSearchRequest.IndexName("test"), TimeValue.timeValueMinutes(1),
+        new SearchSourceBuilder(), factory, List.of());
     client.cleanup(request);
     verify(nodeClient, never()).prepareClearScroll();
   }
 
   @Test
-  void getIndices() {
+  @SneakyThrows
+  void cleanup_rethrows_exception() {
+    when(nodeClient.prepareClearScroll()).thenThrow(new RuntimeException());
+
+    OpenSearchScrollRequest request = new OpenSearchScrollRequest(
+        new OpenSearchRequest.IndexName("test"), TimeValue.timeValueMinutes(1),
+        new SearchSourceBuilder(), factory, List.of());
+    request.setScrollId("scroll123");
+    // Enforce cleaning by setting a private field.
+    FieldUtils.writeField(request, "needClean", true, true);
+    assertThrows(IllegalStateException.class, () -> client.cleanup(request));
+  }
+
+  @Test
+  void get_indices() {
     AliasMetadata aliasMetadata = mock(AliasMetadata.class);
-    ImmutableOpenMap.Builder<String, List<AliasMetadata>> builder = ImmutableOpenMap.builder();
-    builder.fPut("index",Arrays.asList(aliasMetadata));
-    final ImmutableOpenMap<String, List<AliasMetadata>> openMap = builder.build();
+    final var openMap = Map.of("index", List.of(aliasMetadata));
     when(aliasMetadata.alias()).thenReturn("index_alias");
     when(nodeClient.admin().indices()
         .prepareGetIndex()
@@ -409,16 +434,12 @@ class OpenSearchNodeClientTest {
         .setLocal(anyBoolean())
         .get()).thenReturn(mockResponse);
     try {
-      ImmutableOpenMap<String, MappingMetadata> metadata;
+      Map<String, MappingMetadata> metadata;
       if (mappings.isEmpty()) {
-        when(emptyMapping.getSourceAsMap()).thenReturn(ImmutableMap.of());
-        metadata =
-            new ImmutableOpenMap.Builder<String, MappingMetadata>()
-                .fPut(indexName, emptyMapping)
-                .build();
+        when(emptyMapping.getSourceAsMap()).thenReturn(Map.of());
+        metadata = Map.of(indexName, emptyMapping);
       } else {
-        metadata = new ImmutableOpenMap.Builder<String, MappingMetadata>().fPut(indexName,
-            IndexMetadata.fromXContent(createParser(mappings)).mapping()).build();
+        metadata = Map.of(indexName, IndexMetadata.fromXContent(createParser(mappings)).mapping());
       }
       when(mockResponse.mappings()).thenReturn(metadata);
     } catch (IOException e) {
@@ -431,10 +452,8 @@ class OpenSearchNodeClientTest {
     GetSettingsResponse mockResponse = mock(GetSettingsResponse.class);
     when(nodeClient.admin().indices().prepareGetSettings(any()).setLocal(anyBoolean()).get())
         .thenReturn(mockResponse);
-    ImmutableOpenMap<String, Settings> metadata =
-        new ImmutableOpenMap.Builder<String, Settings>()
-            .fPut(indexName, IndexMetadata.fromXContent(createParser(indexMetadata)).getSettings())
-            .build();
+    Map<String, Settings> metadata = Map.of(indexName,
+        IndexMetadata.fromXContent(createParser(indexMetadata)).getSettings());
 
     when(mockResponse.getIndexToSettings()).thenReturn(metadata);
   }
