@@ -6,13 +6,12 @@
 
 package org.opensearch.sql.sql.domain;
 
-import com.google.common.base.Strings;
-import com.google.common.collect.ImmutableSet;
 import java.util.Collections;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Stream;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
@@ -28,9 +27,9 @@ import org.opensearch.sql.protocol.response.format.Format;
 @EqualsAndHashCode
 @RequiredArgsConstructor
 public class SQLQueryRequest {
-
-  private static final Set<String> SUPPORTED_FIELDS = ImmutableSet.of(
-      "query", "fetch_size", "parameters");
+  private static final String QUERY_FIELD_CURSOR = "cursor";
+  private static final Set<String> SUPPORTED_FIELDS = Set.of(
+      "query", "fetch_size", "parameters", QUERY_FIELD_CURSOR);
   private static final String QUERY_PARAMS_FORMAT = "format";
   private static final String QUERY_PARAMS_SANITIZE = "sanitize";
 
@@ -64,39 +63,57 @@ public class SQLQueryRequest {
   @Accessors(fluent = true)
   private boolean sanitize = true;
 
+  private String cursor;
+
   /**
    * Constructor of SQLQueryRequest that passes request params.
    */
-  public SQLQueryRequest(
-      JSONObject jsonContent, String query, String path, Map<String, String> params) {
+  public SQLQueryRequest(JSONObject jsonContent, String query, String path,
+                         Map<String, String> params, String cursor) {
     this.jsonContent = jsonContent;
     this.query = query;
     this.path = path;
     this.params = params;
     this.format = getFormat(params);
     this.sanitize = shouldSanitize(params);
+    this.cursor = cursor;
   }
 
   /**
    * Pre-check if the request can be supported by meeting ALL the following criteria:
    *  1.Only supported fields present in request body, ex. "filter" and "cursor" are not supported
-   *  2.No fetch_size or "fetch_size=0". In other word, it's not a cursor request
-   *  3.Response format is default or can be supported.
+   *  2.Response format is default or can be supported.
    *
-   * @return  true if supported.
+   * @return true if supported.
    */
   public boolean isSupported() {
-    return isOnlySupportedFieldInPayload()
-        && isFetchSizeZeroIfPresent()
-        && isSupportedFormat();
+    var noCursor = !isCursor();
+    var noQuery = query == null;
+    var noUnsupportedParams = params.isEmpty()
+        || (params.size() == 1 && params.containsKey(QUERY_PARAMS_FORMAT));
+    var noContent = jsonContent == null || jsonContent.isEmpty();
+
+    return ((!noCursor && noQuery
+            && noUnsupportedParams && noContent)            // if cursor is given, but other things
+        || (noCursor && !noQuery))                          // or if cursor is not given, but query
+        && isOnlySupportedFieldInPayload()        // and request has supported fields only
+        && isSupportedFormat();                   // and request is in supported format
+  }
+
+  private boolean isCursor() {
+    return cursor != null && !cursor.isEmpty();
   }
 
   /**
    * Check if request is to explain rather than execute the query.
-   * @return  true if it is a explain request
+   * @return true if it is an explain request
    */
   public boolean isExplainRequest() {
     return path.endsWith("/_explain");
+  }
+
+  public boolean isCursorCloseRequest() {
+    return path.endsWith("/close");
   }
 
   /**
@@ -113,23 +130,23 @@ public class SQLQueryRequest {
   }
 
   private boolean isOnlySupportedFieldInPayload() {
-    return SUPPORTED_FIELDS.containsAll(jsonContent.keySet());
+    return jsonContent == null || SUPPORTED_FIELDS.containsAll(jsonContent.keySet());
   }
 
-  private boolean isFetchSizeZeroIfPresent() {
-    return (jsonContent.optInt("fetch_size") == 0);
+  public Optional<String> getCursor() {
+    return Optional.ofNullable(cursor);
+  }
+
+  public int getFetchSize() {
+    return jsonContent.optInt("fetch_size");
   }
 
   private boolean isSupportedFormat() {
-    return Strings.isNullOrEmpty(format) || "jdbc".equalsIgnoreCase(format)
-        || "csv".equalsIgnoreCase(format) || "raw".equalsIgnoreCase(format);
+    return Stream.of("csv", "jdbc", "raw").anyMatch(format::equalsIgnoreCase);
   }
 
   private String getFormat(Map<String, String> params) {
-    if (params.containsKey(QUERY_PARAMS_FORMAT)) {
-      return params.get(QUERY_PARAMS_FORMAT);
-    }
-    return "jdbc";
+    return params.getOrDefault(QUERY_PARAMS_FORMAT, "jdbc");
   }
 
   private boolean shouldSanitize(Map<String, String> params) {
